@@ -1,6 +1,6 @@
 [nosetests]
 verbosity = 2
-stop = TRUE
+#stop = TRUE
 attr = !known_failing
 #processes = -1 # breaks xunit output
 #attr = !known_failing,!highmem
